@@ -1,65 +1,71 @@
 import os
-from xml.dom import minidom, XML_NAMESPACE
-
-from Products.MimetypesRegistry.MimeTypeItem import MimeTypeItem
-from Products.MimetypesRegistry.common import MimeTypeException
-
-#shared mime info name space
-SMINS = 'http://www.freedesktop.org/standards/shared-mime-info'
+from xml.sax import parse
+from xml.sax.handler import ContentHandler
 
 DIR = os.path.dirname(__file__)
 SMI_NAME = "freedesktop.org.xml"
 SMI_FILE = os.path.join(DIR, SMI_NAME)
 
+class SharedMimeInfoHandler(ContentHandler):
+
+    current = None
+    collect_comment = None
+
+    def __init__(self):
+        ContentHandler.__init__(self)
+        self.mimes = []
+
+    def startElement(self, name, attrs):
+        if name in ('mime-type',):
+            current = {'type': attrs['type'],
+                       'comments': {},
+                       'globs': []}
+            self.mimes.append(current)
+            self.current = current
+            return
+        if name in ('comment',):
+            # If no lang, assume 'en'
+            lang = attrs.get('xml:lang', 'en')
+            if lang not in ('en',):
+                # Ignore for now.
+                return
+            self.__comment_buffer = []
+            self.__comment_lang = lang
+            self.collect_comment = True
+            return
+        if name in ('glob',):
+            globs = self.current['globs']
+            globs.append(attrs['pattern'])
+
+    def endElement(self, name):
+        if self.collect_comment and name in ('comment',):
+            self.collect_comment = False
+            lang = self.__comment_lang
+            comment = u''.join(self.__comment_buffer)
+            if not comment:
+                comment = self.current['type']
+            self.current['comments'][lang] = comment
+
+    def characters(self, contents):
+        if self.collect_comment:
+            self.__comment_buffer.append(contents)
+
 def readSMIFile(infofile):
     """Reads a shared mime info XML file
-
-    Bases on the reader from kio-transforms
-    Project:    Kio Transforms
-    Client:	    Isia standing group
-    Authors:    Joe Geldart (jgeldart) -- jgeldart@netalleynetworks.com
-                Michael Zeltner (mzeltner) -- mzeltner@netalleynetworks.com
     """
-    dom = minidom.parse(infofile)
-
-    results = []
-
-    # For each mime-type node...
-    for mtype in dom.getElementsByTagName('mime-type'):
-        # Get the MIME type
-        type = mtype.getAttribute('type')
-        children = [ c for c in mtype.childNodes if c.nodeType == c.ELEMENT_NODE ]
-
-        # For each comment node...
-        commentnodes = [ com for com in children if com.tagName == 'comment']
-        comments = {}
-        for com in commentnodes:
-            lang = com.getAttributeNS(XML_NAMESPACE, 'lang') or 'en'
-            comments[lang] = ''.join([n.nodeValue for n in com.childNodes]).strip()
-
-        # For each glob node...
-        globnodes = [ glb for glb in children if glb.tagName == 'glob']
-        globs = []
-        for glob in globnodes:
-            globs.append(glob.getAttribute('pattern') or None)
-
-        results.append({'type' : type,
-                        'comments' : comments,
-                        'globs' : globs,
-                       })
-
-    # Unlink reference cycles (for garbage collection)
-    dom.unlink()
-
-    return results
+    handler = SharedMimeInfoHandler()
+    parse(infofile, handler)
+    return handler.mimes
 
 mimetypes = readSMIFile(SMI_FILE)
 
 def initialize(registry):
+    global mimetypes
+    from Products.MimetypesRegistry.MimeTypeItem import MimeTypeItem
+    from Products.MimetypesRegistry.common import MimeTypeException
     # Find things that are not in the specially registered mimetypes
     # and add them using some default policy, none of these will impl
     # iclassifier
-    global mimetypes
     for res in mimetypes:
         mt = str(res['type'])
 
