@@ -4,6 +4,10 @@ XXXXXXXXXXXX  - XXXXXXXXX
   * Augment known mimetypes with Windows mimetypes, if available.
     [dreamcatcher]
 
+  * Use a SAX-based parser instead of minidom to improve Zope startup
+    time (by 17 seconds on my Pismo) and memory footprint.
+    [dreamcatcher]
+
 1.3.7-final01 - 2005-10-11
 ==========================
 
